# lab_sim

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
objectives/: pick_and_place_example.xml
